--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -1244,6 +1244,17 @@
       <td>Anhui, Beijing, Chongqing, Fujian, Gansu, Guangdong, Guangxi, Guizhou, Hainan, Hebei, Heilongjiang, Henan, Hubei, Hunan, Inner Mongolia, Jiangsu, Jiangxi, Jilin, Liaoning, Ningxia, Qinghai, Shaanxi, Shandong, Shanghai, Shanxi, Sichuan, Tianjin, Yunnan, Zhejiang</td>
     </tr>
     <tr>
+      <td>Coalition for Epidemic Preparedness Innovations (CEPI)</td>
+      <td>流行病防范创新联盟</td>
+      <td>Shanghai Commission of Science and Technology</td>
+      <td>上海市科学技术委员会</td>
+      <td>Norway</td>
+      <td>Health, International Relations/Exchange, Science and Technology</td>
+      <td>Shanghai</td>
+      <td>2020-07-07</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>Colombian Coffee Growers Federation (FNC)</td>
       <td>哥伦比亚国家咖啡生产者协会</td>
       <td>Beijing Commission of Commerce</td>
@@ -1517,6 +1528,17 @@
       <td>Shanghai</td>
       <td>2017-05-31</td>
       <td>China</td>
+    </tr>
+    <tr>
+      <td>Education and Medical Treatment International Exchange Consortium</td>
+      <td>一般财团法人 教育医疗国际交流财团</td>
+      <td>Liaoning Department of Education</td>
+      <td>辽宁省教育厅</td>
+      <td>Japan</td>
+      <td>Education, International Relations/Exchange</td>
+      <td>Liaoning</td>
+      <td>2020-07-02</td>
+      <td>Liaoning</td>
     </tr>
     <tr>
       <td>Education and Science Society</td>
@@ -3521,6 +3543,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>Loaves and Fishes International</td>
+      <td>美国饼和鱼国际慈善基金会</td>
+      <td>Fujian Department of Civil Affairs</td>
+      <td>福建省民政厅</td>
+      <td>United States</td>
+      <td>Disabilities, Poverty Alleviation, Youth</td>
+      <td>Fujian</td>
+      <td>2020-07-06</td>
+      <td>Fujian</td>
+    </tr>
+    <tr>
       <td>Logistics Alliance Germany</td>
       <td>德国物流联盟</td>
       <td>Shanghai Commission of Transport</td>
@@ -5411,6 +5444,17 @@
       <td>Jilin</td>
       <td>2018-09-04</td>
       <td>Jilin</td>
+    </tr>
+    <tr>
+      <td>USA China Entrepreneurs Association (Liaoning)</td>
+      <td>美国中国企业家协会</td>
+      <td>Liaoning Department of Commerce</td>
+      <td>辽宁省商务厅</td>
+      <td>United States</td>
+      <td>Trade/Industry Association</td>
+      <td>Liaoning</td>
+      <td>2020-07-02</td>
+      <td>Liaoning</td>
     </tr>
     <tr>
       <td>USA China Entrepreneurs Association (Qingdao)</td>
