--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -3059,6 +3059,17 @@
       <td>Tianjin</td>
     </tr>
     <tr>
+      <td>Japan Yunnan Friendship Association</td>
+      <td>特定非营利活动法人日本云南联谊协会</td>
+      <td>Yunnan Federation of Returned Overseas Chinese</td>
+      <td>云南省归国华侨联合会</td>
+      <td>Japan</td>
+      <td>Agriculture, Arts and Culture, Education, Environment, Health, Poverty Alleviation, Science and Technology</td>
+      <td>Yunnan</td>
+      <td>2020-08-03</td>
+      <td>Yunnan</td>
+    </tr>
+    <tr>
       <td>Japan-China Economic Association (Beijing)</td>
       <td>一般财团法人日中经济协会</td>
       <td>Beijing Commission of Commerce</td>
@@ -5707,6 +5718,17 @@
       <td>Environment, Infrastructure, International Relations/Exchange</td>
       <td>Beijing</td>
       <td>2020-04-10</td>
+      <td>China</td>
+    </tr>
+    <tr>
+      <td>World Laureates Association</td>
+      <td>世界顶尖科学家协会（香港）上海中心</td>
+      <td>Shanghai Association for Science and Technology</td>
+      <td>上海市科学技术协会</td>
+      <td>Hong Kong</td>
+      <td>International Relations/Exchange, Science and Technology</td>
+      <td>Shanghai</td>
+      <td>2020-07-27</td>
       <td>China</td>
     </tr>
     <tr>
