--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -287,6 +287,17 @@
       <td>Sichuan</td>
     </tr>
     <tr>
+      <td>AOAC International China Section</td>
+      <td>国际公定分析学会</td>
+      <td>Shandong Administration for Market Regulation</td>
+      <td>山东省市场监督管理局</td>
+      <td>United States</td>
+      <td>Health, Science and Technology</td>
+      <td>Shandong</td>
+      <td>2020-08-14</td>
+      <td>Shandong</td>
+    </tr>
+    <tr>
       <td>ApexBrazil</td>
       <td>巴西出口投资促进局</td>
       <td>Beijing Commission of Commerce</td>
@@ -4718,6 +4729,17 @@
       <td>Guangxi</td>
       <td>2018-10-19</td>
       <td>Guangxi</td>
+    </tr>
+    <tr>
+      <td>Singapore Chinese Chamber of Commerce &amp; Industry</td>
+      <td>新加坡中华总商会</td>
+      <td>Chongqing City Sino-Singapore Model Project Management Bureau</td>
+      <td>重庆市中新示范项目管理局</td>
+      <td>Singapore</td>
+      <td>Trade/Industry Association</td>
+      <td>Chongqing</td>
+      <td>2020-08-13</td>
+      <td>Chongqing</td>
     </tr>
     <tr>
       <td>Singapore International Arbitration Centre (SIAC)</td>
