--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -2102,6 +2102,17 @@
       <td>Guangxi</td>
     </tr>
     <tr>
+      <td>Gumi Electronics and Information Research Institute (GERI)</td>
+      <td>财团法人龟尾电子信息技术院</td>
+      <td>Hunan Department of Science and Technology</td>
+      <td>湖南省科技厅</td>
+      <td>South Korea</td>
+      <td>Science and Technology, Trade/Industry Association</td>
+      <td>Hunan</td>
+      <td>2020-08-21</td>
+      <td>Hunan</td>
+    </tr>
+    <tr>
       <td>Gunma Industry Organization</td>
       <td>日本公益财团法人群马县产业支援机构</td>
       <td>Shanghai Commission of Commerce</td>
@@ -2463,6 +2474,17 @@
       <td>Beijing</td>
       <td>2018-03-19</td>
       <td>China</td>
+    </tr>
+    <tr>
+      <td>Hong Kong Power Youth Association</td>
+      <td>港隽动力青年协会有限公司</td>
+      <td>Guangdong Youth Federation</td>
+      <td>广东省青年联合会</td>
+      <td>Hong Kong</td>
+      <td>Civil Society Capacity-Building, Disabilities, Education, Migrants, Poverty Alleviation, Youth</td>
+      <td>Guangdong</td>
+      <td>2020-08-20</td>
+      <td>Guangdong</td>
     </tr>
     <tr>
       <td>Hong Kong Society for Rehabilitation</td>
