--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -559,7 +559,7 @@
       <td>Education, Health, Infrastructure, Poverty Alleviation</td>
       <td>Guangxi</td>
       <td>2017-10-23</td>
-      <td>Beijing, Guangdong, Guangxi, Guizhou, Yunnan</td>
+      <td>Gansu, Guangxi, Guizhou, Hubei, Yunnan</td>
     </tr>
     <tr>
       <td>Bring Me Hope</td>
@@ -801,7 +801,7 @@
       <td>Arts and Culture, Civil Society Capacity-Building, Education, International Relations/Exchange</td>
       <td>Guangdong</td>
       <td>2019-06-14</td>
-      <td>Guangxi</td>
+      <td>Guangdong</td>
     </tr>
     <tr>
       <td>CEO Foundation</td>
@@ -1197,7 +1197,7 @@
       <td>Trade/Industry Association</td>
       <td>Guangdong</td>
       <td>2017-01-19</td>
-      <td>Beijing, Chongqing, Fujian, Guangdong, Guangxi, Guizhou, Hainan, Hubei, Hunan, Jiangsu, Liaoning, Shanghai, Sichuan, Tianjin, Yunnan, Zhejiang</td>
+      <td>Beijing, Chongqing, Fujian, Guangdong, Guangxi, Guizhou, Hainan, Hubei, Hunan, Jiangsu, Jiangxi, Liaoning, Shanghai, Sichuan, Tianjin, Yunnan, Zhejiang</td>
     </tr>
     <tr>
       <td>Chinese Manufacturers’ Association of Hong Kong</td>
@@ -1637,7 +1637,7 @@
       <td>Science and Technology, Trade/Industry Association</td>
       <td>Beijing</td>
       <td>2018-03-20</td>
-      <td>Anhui, Beijing, Chongqing, Fujian, Gansu, Guangdong, Guangxi, Guizhou, Hainan, Hebei, Heilongjiang, Henan, Hubei, Hunan, Inner Mongolia, Jiangsu, Jiangxi, Liaoning, Ningxia, Qinghai, Shaanxi, Shandong, Shanghai, Shanxi, Sichuan, Tianjin, Yunnan, Zhejiang</td>
+      <td>Anhui, Beijing, Chongqing, Fujian, Gansu, Guangdong, Guangxi, Guizhou, Hainan, Hebei, Heilongjiang, Henan, Hubei, Hunan, Inner Mongolia, Jiangsu, Jiangxi, Jilin, Liaoning, Ningxia, Qinghai, Shaanxi, Shandong, Shanghai, Shanxi, Sichuan, Tianjin, Yunnan, Zhejiang</td>
     </tr>
     <tr>
       <td>European Automobile Manufacturers Association (ACEA)</td>
@@ -1868,7 +1868,7 @@
       <td>Trade/Industry Association</td>
       <td>Shanghai</td>
       <td>2017-09-18</td>
-      <td>Anhui, Beijing, Chongqing, Guizhou, Hebei, Heilongjiang, Henan, Hubei, Hunan, Inner Mongolia, Jiangsu, Jiangxi, Jilin, Liaoning, Ningxia, Qinghai, Shaanxi, Shandong, Shanghai, Shanxi, Sichuan, Tianjin, Tibet, Xinjiang, Yunnan, Zhejiang</td>
+      <td>Anhui, Beijing, Chongqing, Gansu, Guizhou, Hebei, Heilongjiang, Henan, Hubei, Hunan, Inner Mongolia, Jiangsu, Jiangxi, Jilin, Liaoning, Ningxia, Qinghai, Shaanxi, Shandong, Shanghai, Shanxi, Sichuan, Tianjin, Tibet, Xinjiang, Yunnan, Zhejiang</td>
     </tr>
     <tr>
       <td>Fukushima Industrial Revitalization Center</td>
@@ -2641,6 +2641,17 @@
       <td>Beijing, Gansu, Guangdong, Guangxi, Guizhou, Heilongjiang, Hubei, Hunan, Inner Mongolia, Jiangsu, Jiangxi, Liaoning, Shaanxi, Shandong, Shanghai, Sichuan, Tianjin, Xinjiang, Yunnan, Zhejiang</td>
     </tr>
     <tr>
+      <td>Institute of Management Accountants</td>
+      <td>美国管理会计师协会</td>
+      <td>Ministry of Finance</td>
+      <td>财政部</td>
+      <td>United States</td>
+      <td>Trade/Industry Association</td>
+      <td>Shanghai</td>
+      <td>2020-08-31</td>
+      <td>Anhui, Beijing, Chongqing, Fujian, Gansu, Guangdong, Guangxi, Guizhou, Hainan, Hebei, Heilongjiang, Henan, Hubei, Hunan, Inner Mongolia, Jiangsu, Jiangxi, Jilin, Liaoning, Ningxia, Qinghai, Shaanxi, Shandong, Shanghai, Shanxi, Sichuan, Tianjin, Yunnan, Zhejiang</td>
+    </tr>
+    <tr>
       <td>Intercoiffure Mondial (ICD)</td>
       <td>世界发型设计家协会</td>
       <td>Shandong Department of Commerce</td>
@@ -2891,7 +2902,7 @@
       <td>Agriculture</td>
       <td>Hubei</td>
       <td>2017-05-15</td>
-      <td>Anhui, Hubei, Hunan, Jiangsu, Jiangxi, Shanghai, Zhejiang</td>
+      <td>Anhui, Fujian, Hubei, Hunan, Jiangsu, Jiangxi, Shanghai, Zhejiang</td>
     </tr>
     <tr>
       <td>International Silk Union</td>
@@ -2913,7 +2924,7 @@
       <td>Arts and Culture, International Relations/Exchange, Tourism, Trade/Industry Association</td>
       <td>Tianjin</td>
       <td>2017-07-11</td>
-      <td>Tianjin</td>
+      <td>NaN</td>
     </tr>
     <tr>
       <td>International Taekwon-Do Federation</td>
@@ -3048,6 +3059,17 @@
       <td>Anhui, Beijing, Chongqing, Fujian, Gansu, Guangdong, Guizhou, Hebei, Heilongjiang, Henan, Hubei, Hunan, Inner Mongolia, Jiangsu, Jiangxi, Jilin, Liaoning, Qinghai, Shaanxi, Shandong, Shanghai, Shanxi, Sichuan, Tianjin, Yunnan, Zhejiang</td>
     </tr>
     <tr>
+      <td>Japan China Science, Technology and Culture Center</td>
+      <td>一般社团法人日中科学技术文化中心</td>
+      <td>Shanghai Hongqiao Business District Management Committee</td>
+      <td>上海虹桥商务区管理委员会</td>
+      <td>Japan</td>
+      <td>Economic Development, Trade/Industry Association</td>
+      <td>Shanghai</td>
+      <td>2020-08-31</td>
+      <td>Jiangsu, Shanghai, Zhejiang</td>
+    </tr>
+    <tr>
       <td>Japan Grain Inspection Association</td>
       <td>日本榖物检定协会</td>
       <td>General Administration of Customs</td>
@@ -3177,7 +3199,7 @@
       <td>Trade/Industry Association</td>
       <td>Beijing</td>
       <td>2017-07-05</td>
-      <td>Anhui, Beijing, Fujian, Guangxi, Hebei, Henan, Jiangsu, Shanghai, Sichuan, Tianjin</td>
+      <td>Anhui, Beijing, Fujian, Guangdong, Hebei, Henan, Jiangsu, Shanghai, Sichuan, Tianjin</td>
     </tr>
     <tr>
       <td>Japan-China Long-Term Trade Agreement Committee</td>
@@ -3452,7 +3474,7 @@
       <td>Trade/Industry Association</td>
       <td>Shanghai</td>
       <td>2017-05-31</td>
-      <td>Anhui, Chongqing, Fujian, Guangdong, Hebei, Heilongjiang, Henan, Hubei, Hunan, Jiangsu, Jiangxi, Jilin, Liaoning, Shandong, Shanghai, Xinjiang, Zhejiang</td>
+      <td>Anhui, Beijing, Fujian, Guangdong, Hebei, Heilongjiang, Henan, Hubei, Hunan, Jiangsu, Jiangxi, Jilin, Liaoning, Shandong, Shanghai, Xinjiang, Zhejiang</td>
     </tr>
     <tr>
       <td>Korea-China Cultural Association</td>
@@ -3848,7 +3870,7 @@
       <td>Environment</td>
       <td>Beijing</td>
       <td>2017-11-17</td>
-      <td>Anhui, Beijing, Chongqing, Fujian, Gansu, Guangdong, Guizhou, Hebei, Henan, Hunan, Inner Mongolia, Jiangsu, Shaanxi, Shandong, Shanghai, Shanxi, Sichuan, Zhejiang</td>
+      <td>Anhui, Beijing, Chongqing, Fujian, Gansu, Guangdong, Guizhou, Hebei, Henan, Hubei, Hunan, Inner Mongolia, Jiangsu, Shaanxi, Shandong, Shanghai, Shanxi, Sichuan, Zhejiang</td>
     </tr>
     <tr>
       <td>Nature Conservancy</td>
@@ -4112,7 +4134,7 @@
       <td>Trade/Industry Association</td>
       <td>Beijing</td>
       <td>2018-03-20</td>
-      <td>Beijing, Gansu, Hebei, Heilongjiang, Henan, Inner Mongolia, Liaoning, Ningxia, Qinghai, Shaanxi, Shanxi, Tianjin, Tibet, Xinjiang</td>
+      <td>Beijing, Gansu, Hebei, Heilongjiang, Henan, Inner Mongolia, Jilin, Liaoning, Ningxia, Qinghai, Shaanxi, Shanxi, Tianjin, Tibet, Xinjiang</td>
     </tr>
     <tr>
       <td>Okinawa Industrial Revitalization Commune (Fujian)</td>
@@ -4189,7 +4211,7 @@
       <td>Environment, International Relations/Exchange</td>
       <td>Inner Mongolia</td>
       <td>2018-04-18</td>
-      <td>Beijing, Gansu, Inner Mongolia, Ningxia, Qinghai, Shandong, Xinjiang</td>
+      <td>Beijing, Gansu, Inner Mongolia, Ningxia, Qinghai, Shanxi, Xinjiang</td>
     </tr>
     <tr>
       <td>Osaka Industrial Revitalization Organization</td>
@@ -4266,7 +4288,7 @@
       <td>Civil Society Capacity-Building, Disaster Relief, Education, Environment, Gender Issues, International Relations/Exchange, Poverty Alleviation</td>
       <td>Beijing</td>
       <td>2017-09-22</td>
-      <td>Anhui, Beijing, Chongqing, Fujian, Guangxi, Guizhou, Hainan, Hebei, Heilongjiang, Henan, Hubei, Inner Mongolia, Jiangsu, Jiangxi, Jilin, Liaoning, Ningxia, Qinghai, Shaanxi, Shandong, Shanghai, Shanxi, Sichuan, Tianjin, Tibet, Xinjiang, Zhejiang</td>
+      <td>Anhui, Beijing, Chongqing, Fujian, Guangxi, Guizhou, Hainan, Hebei, Heilongjiang, Henan, Hubei, Hunan, Inner Mongolia, Jiangsu, Jiangxi, Jilin, Liaoning, Ningxia, Qinghai, Shaanxi, Shandong, Shanghai, Shanxi, Sichuan, Tianjin, Tibet, Xinjiang, Zhejiang</td>
     </tr>
     <tr>
       <td>Oxfam (Gansu)</td>
@@ -4464,7 +4486,7 @@
       <td>Disaster Relief, Health, Poverty Alleviation</td>
       <td>Shanghai</td>
       <td>2017-01-17</td>
-      <td>Anhui, Fujian, Guangdong, Guangxi, Guizhou, Heilongjiang, Inner Mongolia, Jiangsu, Qinghai, Shandong, Shanghai, Sichuan, Tibet, Xinjiang, Yunnan, Zhejiang</td>
+      <td>Anhui, Fujian, Guangdong, Guangxi, Guizhou, Heilongjiang, Inner Mongolia, Jiangsu, Liaoning, Qinghai, Shandong, Shanghai, Sichuan, Tibet, Xinjiang, Yunnan, Zhejiang</td>
     </tr>
     <tr>
       <td>Pyrexa Global</td>
@@ -4475,7 +4497,7 @@
       <td>Economic Development, Trade/Industry Association</td>
       <td>Shanghai</td>
       <td>2018-03-19</td>
-      <td>Chongqing, Fujian, Gansu, Guangdong, Guangxi, Heilongjiang, Jiangsu, Liaoning, Shaanxi, Shandong, Shanghai, Sichuan, Yunnan, Zhejiang</td>
+      <td>Beijing, Chongqing, Fujian, Gansu, Guangdong, Guangxi, Heilongjiang, Jiangsu, Liaoning, Shaanxi, Shandong, Shanghai, Sichuan, Tianjin, Yunnan, Zhejiang</td>
     </tr>
     <tr>
       <td>Rare</td>
@@ -4585,7 +4607,7 @@
       <td>Trade/Industry Association</td>
       <td>Shanghai</td>
       <td>2017-01-17</td>
-      <td>Anhui, Chongqing, Fujian, Guangdong, Guizhou, Hainan, Hubei, Hunan, Jiangsu, Jiangxi, Shanghai, Sichuan, Tibet, Yunnan, Zhejiang</td>
+      <td>Anhui, Chongqing, Fujian, Guangdong, Guangxi, Guizhou, Hainan, Hubei, Hunan, Jiangsu, Jiangxi, Shanghai, Sichuan, Tibet, Yunnan, Zhejiang</td>
     </tr>
     <tr>
       <td>Salvation Army (Sichuan)</td>
@@ -5171,6 +5193,17 @@
       <td>Fujian</td>
     </tr>
     <tr>
+      <td>Thai-Chinese Culture and Economy Association</td>
+      <td>泰国文化经济协会</td>
+      <td>Shanghai Hongqiao Business District Management Committee</td>
+      <td>上海虹桥商务区管理委员会</td>
+      <td>Thailand</td>
+      <td>Trade/Industry Association</td>
+      <td>Shanghai</td>
+      <td>2020-08-31</td>
+      <td>Shanghai</td>
+    </tr>
+    <tr>
       <td>Thai-Chinese Human Resources Exchange Association</td>
       <td>泰中人才交流协会</td>
       <td>Hunan Department of Commerce</td>
@@ -5377,7 +5410,7 @@
       <td>Trade/Industry Association</td>
       <td>Shanghai</td>
       <td>2017-01-17</td>
-      <td>Anhui, Chongqing, Fujian, Gansu, Guangdong, Guangxi, Guizhou, Hainan, Hebei, Heilongjiang, Henan, Hubei, Hunan, Inner Mongolia, Jiangsu, Jiangxi, Jilin, Liaoning, Ningxia, Qinghai, Shaanxi, Shandong, Shanghai, Shanxi, Sichuan, Tibet, Xinjiang, Yunnan, Zhejiang</td>
+      <td>Anhui, Chongqing, Fujian, Gansu, Guangdong, Guangxi, Guizhou, Hainan, Heilongjiang, Henan, Hubei, Hunan, Inner Mongolia, Jiangsu, Jiangxi, Jilin, Liaoning, Ningxia, Qinghai, Shaanxi, Shandong, Shanghai, Shanxi, Sichuan, Tibet, Xinjiang, Yunnan, Zhejiang</td>
     </tr>
     <tr>
       <td>UBS Optimus Foundation</td>
@@ -5740,7 +5773,7 @@
       <td>Trade/Industry Association</td>
       <td>Beijing</td>
       <td>2019-08-08</td>
-      <td>Beijing, Gansu, Hebei, Heilongjiang, Inner Mongolia, Jilin, Liaoning, Ningxia, Qinghai, Shaanxi, Shandong, Shanxi, Sichuan, Xinjiang</td>
+      <td>Beijing, Gansu, Hebei, Heilongjiang, Inner Mongolia, Jilin, Liaoning, Ningxia, Qinghai, Shaanxi, Shandong, Shanxi, Tianjin, Xinjiang</td>
     </tr>
     <tr>
       <td>World Gold Council (Shanghai)</td>
