--- a/monthly/NewPSUHeatmap.html
+++ b/monthly/NewPSUHeatmap.html
@@ -169,12 +169,13 @@ var margin = { top: 190, right: 10, bottom: 50, left: 435 },
   legendElementWidth = cellSize*2.7,
   colorBuckets = 13,
   colors = ['#ffffff','#ffd6de','#ffadbe','#ff859d','#ff5c7c','#ff335c','#ff0032','#e0002d','#b80025','#8f001d','#660014','#3d000c','#140004'];
-  hcrow = [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60],
+  hcrow = [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62,63],
   hccol = [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35], // these are what shows up in the first two columns of your TSV data, they match up with the labels below
   rowLabel = ["All China-Federation of Returned Overseas Chinese",
   "All-China Federation of Trade Unions",
   "All-China Women's Federation",
   "All-China Youth Federation**",
+	"Beijing Gardening and Greening Bureau†**",
   "China Association for Science and Technology",
   "China Banking and Insurance Regulatory Commission",
   "China Council for the Promotion of International Trade",
@@ -184,6 +185,7 @@ var margin = { top: 190, right: 10, bottom: 50, left: 435 },
   "China Securities Regulatory Commission",
   "Chinese Association for International Understanding†**",
   "Chinese People's Association for Friendship with Foreign Countries",
+	"Chongqing City Sino-Singapore Model Project Management Bureau†**",
   "Civil Aviation Administration of China",
   "Communist Party Central Committee International Liaison Department",
   "Communist Youth League of China**",
@@ -218,6 +220,7 @@ var margin = { top: 190, right: 10, bottom: 50, left: 435 },
   "National Medical Products Administration",
   "National Radio and Television Administration",
   "People’s Bank of China",
+	"Shanghai Hongqiao Business District Management Committee†**",
   "Shanghai Institutes for International Studies†**",
   "State Administration of Cultural Heritage",
   "State Administration for Market Regulation",
