--- a/index_TA_table.html
+++ b/index_TA_table.html
@@ -2897,23 +2897,6 @@
       <td>Barry &amp; Martin’s Trust</td>
       <td>贝利马丁基金会</td>
       <td>United Kingdom</td>
-      <td>Contributions to Xining City, Chengzong District Sunshine Care Association</td>
-      <td>西宁市城中区阳光关爱协会接受英国贝利马丁基金会捐赠</td>
-      <td>Qinghai Province</td>
-      <td>青海省</td>
-      <td>Health</td>
-      <td>2020-01-01</td>
-      <td>2020-12-31</td>
-      <td>Xining City, Chengzong District Sunshine Care Association</td>
-      <td>西宁市城中区阳光关爱协会</td>
-      <td>Non-profit or Foundation</td>
-      <td>Unknown</td>
-      <td>Unknown</td>
-    </tr>
-    <tr>
-      <td>Barry &amp; Martin’s Trust</td>
-      <td>贝利马丁基金会</td>
-      <td>United Kingdom</td>
       <td>Psychological Support Program for HIV-Infected Persons in Hubei Province, Yichang City During the Novel Coronavirus Epidemic</td>
       <td>新型肺炎形式下湖北宜昌艾滋感染者心理援助项目</td>
       <td>Hubei Province</td>
@@ -2960,6 +2943,23 @@
       <td>Non-profit or Foundation</td>
       <td>Wuchang District Bureau of Civil Affairs</td>
       <td>区民政局</td>
+    </tr>
+    <tr>
+      <td>Barry &amp; Martin’s Trust</td>
+      <td>贝利马丁基金会</td>
+      <td>United Kingdom</td>
+      <td>Contributions to Xining City, Chengzong District Sunshine Care Association</td>
+      <td>西宁市城中区阳光关爱协会接受英国贝利马丁基金会捐赠</td>
+      <td>Qinghai Province</td>
+      <td>青海省</td>
+      <td>Health</td>
+      <td>2020-01-01</td>
+      <td>2020-12-31</td>
+      <td>Xining City, Chengzong District Sunshine Care Association</td>
+      <td>西宁市城中区阳光关爱协会</td>
+      <td>Non-profit or Foundation</td>
+      <td>Unknown</td>
+      <td>Unknown</td>
     </tr>
     <tr>
       <td>Bay Area Hong Kong Center</td>
@@ -3492,6 +3492,23 @@
       <td>Botanic Gardens Conservation International (BGCI)</td>
       <td>国际植物园保护联盟</td>
       <td>United Kingdom</td>
+      <td>Active Community Participation in Guangxi Province's Unique Karst Vegetation Diversity Ecological Restoration</td>
+      <td>社区积极参与下广西独特的喀斯特植物多样性生态修复</td>
+      <td>Guangxi Zhuang Autonomous Region</td>
+      <td>广西壮族自治区</td>
+      <td>Environment</td>
+      <td>2020-09-25</td>
+      <td>2020-12-31</td>
+      <td>Chinese Academy of Sciences Guangxi Botany Institute</td>
+      <td>广西壮族自治区中国科学院广西植物研究所</td>
+      <td>Think Tank or Research Institution</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Botanic Gardens Conservation International (BGCI)</td>
+      <td>国际植物园保护联盟</td>
+      <td>United Kingdom</td>
       <td>Comprehensive Protection of the Endangered Plant Ostrya Rehderiana</td>
       <td>濒危植物天目铁木的综合保护</td>
       <td>Zhejiang Province</td>
@@ -3757,23 +3774,6 @@
       <td>Zhoushan City Forest Industry Scientific Research Institutee</td>
       <td>舟山市林业科学研究院</td>
       <td>Party or Government Entity</td>
-      <td>Not Applicable</td>
-      <td>Not Applicable</td>
-    </tr>
-    <tr>
-      <td>Botanic Gardens Conservation International (BGCI)</td>
-      <td>国际植物园保护联盟</td>
-      <td>United Kingdom</td>
-      <td>Active Community Participation in Guangxi Province's Unique Karst Vegetation Diversity Ecological Restoration</td>
-      <td>社区积极参与下广西独特的喀斯特植物多样性生态修复</td>
-      <td>Guangxi Zhuang Autonomous Region</td>
-      <td>广西壮族自治区</td>
-      <td>Environment</td>
-      <td>2020-09-25</td>
-      <td>2020-12-31</td>
-      <td>Chinese Academy of Sciences Guangxi Botany Institute</td>
-      <td>广西壮族自治区中国科学院广西植物研究所</td>
-      <td>Think Tank or Research Institution</td>
       <td>Not Applicable</td>
       <td>Not Applicable</td>
     </tr>
@@ -7569,6 +7569,23 @@
       <td>Not Applicable</td>
     </tr>
     <tr>
+      <td>China Candlelight Educational Fund Ltd.</td>
+      <td>中国烛光教育基金</td>
+      <td>Hong Kong</td>
+      <td>Yunfu City Disadvantaged Students Scholarship Disbursement</td>
+      <td>云浮市特困学生助学金派发</td>
+      <td>Guangdong Province</td>
+      <td>广东省</td>
+      <td>Education, Poverty Alleviation</td>
+      <td>2020-07-27</td>
+      <td>2021-07-26</td>
+      <td>Yunfu City Communist Youth League Committee</td>
+      <td>中国共产主义青年团云浮市委员会学少部</td>
+      <td>Party or Government Entity</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
       <td>China Care Fund Limited</td>
       <td>培苗行动有限公司</td>
       <td>Hong Kong</td>
@@ -9170,6 +9187,23 @@
       <td>Council on International Educational Exchange (CIEE)</td>
       <td>美国国际教育交流协会</td>
       <td>United States</td>
+      <td>CIEE Cooperative Program</td>
+      <td>美国国际教育交流协会（CIEE）合作项目</td>
+      <td>Shanghai City</td>
+      <td>上海市</td>
+      <td>Education, International Relations/Exchange</td>
+      <td>2020-08-16</td>
+      <td>2021-08-15</td>
+      <td>East China Normal University</td>
+      <td>华东师范大学国际教育中心</td>
+      <td>School, College, University, or Training Institution</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Council on International Educational Exchange (CIEE)</td>
+      <td>美国国际教育交流协会</td>
+      <td>United States</td>
       <td>CIEE “Come to China to Teach” Program</td>
       <td>美国国际教育交流协会（CIEE）“来华任教”项目</td>
       <td>Shanghai City</td>
@@ -9199,23 +9233,6 @@
       <td>Non-profit or Foundation</td>
       <td>Shanghai City, Xuhui District Bureau of Education</td>
       <td>上海市徐汇区教育局</td>
-    </tr>
-    <tr>
-      <td>Council on International Educational Exchange (CIEE)</td>
-      <td>美国国际教育交流协会</td>
-      <td>United States</td>
-      <td>CIEE Cooperative Program</td>
-      <td>美国国际教育交流协会（CIEE）合作项目</td>
-      <td>Shanghai City</td>
-      <td>上海市</td>
-      <td>Education, International Relations/Exchange</td>
-      <td>2020-08-16</td>
-      <td>2021-08-15</td>
-      <td>East China Normal University</td>
-      <td>华东师范大学国际教育中心</td>
-      <td>School, College, University, or Training Institution</td>
-      <td>Not Applicable</td>
-      <td>Not Applicable</td>
     </tr>
     <tr>
       <td>Cradle of Hope Adoption Agency</td>
@@ -9398,6 +9415,23 @@
       <td>Education, Poverty Alleviation</td>
       <td>2020-04-16</td>
       <td>2021-04-16</td>
+      <td>Amity Foundation</td>
+      <td>爱德基金会</td>
+      <td>Non-profit or Foundation</td>
+      <td>Jiangsu Province United Front Work Department</td>
+      <td>江苏省委统战部</td>
+    </tr>
+    <tr>
+      <td>Culture Regeneration Research Society</td>
+      <td>文化更新研究中心（香港）有限公司</td>
+      <td>Hong Kong</td>
+      <td>Passing on Compassion Student Financial Aid Project</td>
+      <td>爱心传承助学计划</td>
+      <td>Beijing City / Guangxi Zhuang Autonomous Region</td>
+      <td>北京市,广西壮族自治区</td>
+      <td>Education, Poverty Alleviation</td>
+      <td>2020-09-01</td>
+      <td>2021-08-31</td>
       <td>Amity Foundation</td>
       <td>爱德基金会</td>
       <td>Non-profit or Foundation</td>
@@ -10545,23 +10579,6 @@
     </tr>
     <tr>
       <td>Europe-Asia Financial Group</td>
-      <td>欧亚财团</td>
-      <td>Unknown</td>
-      <td>East Asia Maritime Exchange and Cultural Academic Exchange</td>
-      <td>东亚海上交流与文化学术交流</td>
-      <td>Zhejiang Province</td>
-      <td>浙江省</td>
-      <td>Arts and Culture, Education, International Relations/Exchange</td>
-      <td>2020-08-01</td>
-      <td>2021-02-28</td>
-      <td>Zhejiang University Institute of South Korean Studies</td>
-      <td>浙江大学韩国研究所</td>
-      <td>School, College, University, or Training Institution</td>
-      <td>Not Applicable</td>
-      <td>Not Applicable</td>
-    </tr>
-    <tr>
-      <td>Europe-Asia Financial Group</td>
       <td>一般财团法人欧亚财团</td>
       <td>Unknown</td>
       <td>Research on Systems for Cultivating Intercultural Communication Ability</td>
@@ -10573,6 +10590,23 @@
       <td>2020-12-31</td>
       <td>Changzhou Institute of Technology</td>
       <td>常州工学院</td>
+      <td>School, College, University, or Training Institution</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Europe-Asia Financial Group</td>
+      <td>欧亚财团</td>
+      <td>Unknown</td>
+      <td>East Asia Maritime Exchange and Cultural Academic Exchange</td>
+      <td>东亚海上交流与文化学术交流</td>
+      <td>Zhejiang Province</td>
+      <td>浙江省</td>
+      <td>Arts and Culture, Education, International Relations/Exchange</td>
+      <td>2020-08-01</td>
+      <td>2021-02-28</td>
+      <td>Zhejiang University Institute of South Korean Studies</td>
+      <td>浙江大学韩国研究所</td>
       <td>School, College, University, or Training Institution</td>
       <td>Not Applicable</td>
       <td>Not Applicable</td>
@@ -13568,6 +13602,23 @@
       <td>Non-profit or Foundation</td>
       <td>Unknown</td>
       <td>无</td>
+    </tr>
+    <tr>
+      <td>Future Science Prize Foundation Limited</td>
+      <td>未来科学大奖基金会有限公司</td>
+      <td>Hong Kong</td>
+      <td>2020 Future Science Prize News Conference</td>
+      <td>2020年未来科学大奖新闻发布会</td>
+      <td>Beijing City</td>
+      <td>北京市</td>
+      <td>Education, Science and Technology</td>
+      <td>2020-09-01</td>
+      <td>2020-11-30</td>
+      <td>Beijing City, Chaoyang District Future Forum Science and Technology Development Center</td>
+      <td>北京市朝阳区未来论坛科技发展中心</td>
+      <td>Unknown</td>
+      <td>Unknown</td>
+      <td>Unknown</td>
     </tr>
     <tr>
       <td>Gallant Ho Charities &amp; Public Well-Being Services (H.K., P.R.C.) Limited</td>
@@ -17339,6 +17390,23 @@
       <td>2019-10-31</td>
       <td>Gansu Province, Dingxi City, Lintao County, Lian'erwan People's Government</td>
       <td>甘肃省定西市临洮县连儿湾乡人民政府</td>
+      <td>Party or Government Entity</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Grace Charity Foundation Limited</td>
+      <td>慈恩基金会有限公司</td>
+      <td>Hong Kong</td>
+      <td>Continued Support for Especially Impoverished Students to Attend University</td>
+      <td>持续资助优困生上大学</td>
+      <td>Hunan Province</td>
+      <td>湖南省</td>
+      <td>Education, Poverty Alleviation</td>
+      <td>2020-08-01</td>
+      <td>2020-12-01</td>
+      <td>Hunan Province, Pingjiang County Bureau of Education</td>
+      <td>湖南省平江县教育局</td>
       <td>Party or Government Entity</td>
       <td>Not Applicable</td>
       <td>Not Applicable</td>
@@ -28190,6 +28258,23 @@
       <td>Not Applicable</td>
     </tr>
     <tr>
+      <td>Macau Gaoming Natives Association</td>
+      <td>澳门高明同乡会</td>
+      <td>Macau</td>
+      <td>Compassion Donations for the Novel Coronavirus Epidemic</td>
+      <td>新冠疫情爱心捐赠</td>
+      <td>Guangdong Province</td>
+      <td>广东省</td>
+      <td>Health</td>
+      <td>2020-02-19</td>
+      <td>2020-08-31</td>
+      <td>Foshan City, Gaoming District Red Cross Association</td>
+      <td>佛山市高明区红十字会</td>
+      <td>Unknown</td>
+      <td>Unknown</td>
+      <td>Unknown</td>
+    </tr>
+    <tr>
       <td>Macau Grassroots Level Federation</td>
       <td>澳门草根阶层联合会</td>
       <td>Macau</td>
@@ -32443,6 +32528,23 @@
       <td>Overseas Guanghai Village Fraternal Association</td>
       <td>海外广海乡亲联谊会</td>
       <td>United States</td>
+      <td>Donation of Goods to Combat the Epidemic from the Overseas Guanghai Village Fraternal Association and Seven Other Social Groups (2)</td>
+      <td>海外广海乡亲联谊总会等8个社团疫情捐赠活动（2）</td>
+      <td>Guangdong Province</td>
+      <td>广东省</td>
+      <td>Health</td>
+      <td>2020-08-06</td>
+      <td>2020-12-31</td>
+      <td>Taishan City Red Cross Association</td>
+      <td>台山市红十字会</td>
+      <td>Unknown</td>
+      <td>Unknown</td>
+      <td>Unknown</td>
+    </tr>
+    <tr>
+      <td>Overseas Guanghai Village Fraternal Association</td>
+      <td>海外广海乡亲联谊会</td>
+      <td>United States</td>
       <td>Guanghai Town Teacher and Student Financial Aid Donations</td>
       <td>广海镇奖教助学捐赠</td>
       <td>Guangdong Province</td>
@@ -32557,23 +32659,6 @@
       <td>Party or Government Entity</td>
       <td>Not Applicable</td>
       <td>Not Applicable</td>
-    </tr>
-    <tr>
-      <td>Overseas Guanghai Village Fraternal Association</td>
-      <td>海外广海乡亲联谊会</td>
-      <td>United States</td>
-      <td>Donation of Goods to Combat the Epidemic from the Overseas Guanghai Village Fraternal Association and Seven Other Social Groups (2)</td>
-      <td>海外广海乡亲联谊总会等8个社团疫情捐赠活动（2）</td>
-      <td>Guangdong Province</td>
-      <td>广东省</td>
-      <td>Health</td>
-      <td>2020-08-06</td>
-      <td>2020-12-31</td>
-      <td>Taishan City Red Cross Association</td>
-      <td>台山市红十字会</td>
-      <td>Unknown</td>
-      <td>Unknown</td>
-      <td>Unknown</td>
     </tr>
     <tr>
       <td>Oxfam</td>
@@ -42575,6 +42660,23 @@
       <td>Toi Shan Association of Hong Kong Charitable Foundation Limited</td>
       <td>香港台山商会慈善机构有限公司</td>
       <td>Hong Kong</td>
+      <td>Donations to Assist with Serious Illness</td>
+      <td>香港台山商会慈善机构有限公司捐赠大病救助项目</td>
+      <td>Guangdong Province</td>
+      <td>广东省</td>
+      <td>Health</td>
+      <td>2020-09-01</td>
+      <td>2020-12-31</td>
+      <td>Taishan Charity Federation</td>
+      <td>台山市慈善会</td>
+      <td>Non-profit or Foundation</td>
+      <td>Taishan City Bureau of Civil Affairs</td>
+      <td>台山市民政局</td>
+    </tr>
+    <tr>
+      <td>Toi Shan Association of Hong Kong Charitable Foundation Limited</td>
+      <td>香港台山商会慈善机构有限公司</td>
+      <td>Hong Kong</td>
       <td>One Yuan of Compassion Day</td>
       <td>一元爱心日活动</td>
       <td>Guangdong Province</td>
@@ -42859,23 +42961,6 @@
       <td>School, College, University, or Training Institution</td>
       <td>Not Applicable</td>
       <td>Not Applicable</td>
-    </tr>
-    <tr>
-      <td>Toi Shan Association of Hong Kong Charitable Foundation Limited</td>
-      <td>香港台山商会慈善机构有限公司</td>
-      <td>Hong Kong</td>
-      <td>Donations to Assist with Serious Illness</td>
-      <td>香港台山商会慈善机构有限公司捐赠大病救助项目</td>
-      <td>Guangdong Province</td>
-      <td>广东省</td>
-      <td>Health</td>
-      <td>2020-09-01</td>
-      <td>2020-12-31</td>
-      <td>Taishan Charity Federation</td>
-      <td>台山市慈善会</td>
-      <td>Non-profit or Foundation</td>
-      <td>Taishan City Bureau of Civil Affairs</td>
-      <td>台山市民政局</td>
     </tr>
     <tr>
       <td>Tongshou Xing</td>
@@ -43233,6 +43318,23 @@
       <td>Party or Government Entity</td>
       <td>Not Applicable</td>
       <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Treasure Island Foundation</td>
+      <td>金银岛教育基金</td>
+      <td>United States</td>
+      <td>Financial Aid for Especially Impoverished Students in Heshan City</td>
+      <td>美国金银岛教育基金资助鹤山市特困生活动</td>
+      <td>Guangdong Province</td>
+      <td>广东省</td>
+      <td>Education, Poverty Alleviation</td>
+      <td>2020-09-28</td>
+      <td>2021-03-29</td>
+      <td>Heshan City, Overseas Countrymen Friendship Association</td>
+      <td>鹤山市海外乡亲联谊会</td>
+      <td>Non-profit or Foundation</td>
+      <td>Heshan City United Front Work Department</td>
+      <td>中国共产党鹤山市委员会统一战线工作部</td>
     </tr>
     <tr>
       <td>True Compassion Education Fund Foundation Limited</td>
@@ -44241,6 +44343,23 @@
       <td>Twinklestars</td>
       <td>摘星计划</td>
       <td>Hong Kong</td>
+      <td>Inspirational Sudent Financial Aid</td>
+      <td>香港摘星计划励志助学行动</td>
+      <td>Guangdong Province</td>
+      <td>广东省</td>
+      <td>Education, Poverty Alleviation, Youth</td>
+      <td>2020-08-31</td>
+      <td>2021-08-30</td>
+      <td>Meizhou City Overseas Friendship Association</td>
+      <td>梅州市海外联谊会</td>
+      <td>Non-profit or Foundation</td>
+      <td>Unknown</td>
+      <td>Unknown</td>
+    </tr>
+    <tr>
+      <td>Twinklestars</td>
+      <td>摘星计划</td>
+      <td>Hong Kong</td>
       <td>Twinklestars's Kickoff Ceremony and Conference</td>
       <td>香港摘星计划启动仪式、座谈会</td>
       <td>Guangxi Zhuang Autonomous Region</td>
@@ -44338,23 +44457,6 @@
       <td>Non-profit or Foundation</td>
       <td>Nanning City Bureau of Education</td>
       <td>南宁市教育局</td>
-    </tr>
-    <tr>
-      <td>Twinklestars</td>
-      <td>摘星计划</td>
-      <td>Hong Kong</td>
-      <td>Inspirational Sudent Financial Aid</td>
-      <td>香港摘星计划励志助学行动</td>
-      <td>Guangdong Province</td>
-      <td>广东省</td>
-      <td>Education, Poverty Alleviation, Youth</td>
-      <td>2020-08-31</td>
-      <td>2021-08-30</td>
-      <td>Meizhou City Overseas Friendship Association</td>
-      <td>梅州市海外联谊会</td>
-      <td>Non-profit or Foundation</td>
-      <td>Unknown</td>
-      <td>Unknown</td>
     </tr>
     <tr>
       <td>U-Hearts</td>
@@ -45582,6 +45684,23 @@
     </tr>
     <tr>
       <td>Venezuela National Overseas Chinese Federation</td>
+      <td>委内瑞拉全国华人华侨联合总会</td>
+      <td>United States</td>
+      <td>Contributions for the Epidemic Situation</td>
+      <td>委内瑞拉全国华人华侨联合总会疫情捐赠活动</td>
+      <td>Guangdong Province</td>
+      <td>广东省</td>
+      <td>Health</td>
+      <td>2020-07-15</td>
+      <td>2020-12-31</td>
+      <td>Taishan Charity Federation</td>
+      <td>台山市慈善会</td>
+      <td>Non-profit or Foundation</td>
+      <td>Taishan City Bureau of Civil Affairs</td>
+      <td>台山市民政局</td>
+    </tr>
+    <tr>
+      <td>Venezuela National Overseas Chinese Federation</td>
       <td>委内瑞拉全国华侨华人联合总会</td>
       <td>Venezuela</td>
       <td>Donations to Support Heads of Households in Combatting the Epidemic</td>
@@ -45599,20 +45718,20 @@
     </tr>
     <tr>
       <td>Venezuela National Overseas Chinese Federation</td>
-      <td>委内瑞拉全国华人华侨联合总会</td>
-      <td>United States</td>
-      <td>Contributions for the Epidemic Situation</td>
-      <td>委内瑞拉全国华人华侨联合总会疫情捐赠活动</td>
+      <td>委内瑞拉全国华侨华人联合总会</td>
+      <td>Venezuela</td>
+      <td>Donations to Support Heads of Households in Combatting the Epidemic</td>
+      <td>委内瑞拉全国华侨华人联合总会支持开平市新冠肺炎疫情</td>
       <td>Guangdong Province</td>
       <td>广东省</td>
       <td>Health</td>
-      <td>2020-07-15</td>
-      <td>2020-12-31</td>
-      <td>Taishan Charity Federation</td>
-      <td>台山市慈善会</td>
+      <td>2020-02-17</td>
+      <td>2020-08-31</td>
+      <td>Kaiping Charity Federation</td>
+      <td>开平市慈善会</td>
       <td>Non-profit or Foundation</td>
-      <td>Taishan City Bureau of Civil Affairs</td>
-      <td>台山市民政局</td>
+      <td>Kaiping City Bureau of Civil Affairs</td>
+      <td>开平市民政局</td>
     </tr>
     <tr>
       <td>Venezuela Wuyi Youth Association</td>
