--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -353,6 +353,17 @@
       <td>Beijing, Guangdong, Hebei, Shaanxi, Yunnan</td>
     </tr>
     <tr>
+      <td>Asian Habitat Society</td>
+      <td>亚洲人居环境协会</td>
+      <td>Hubei Department of Housing and Urban-Rural Development</td>
+      <td>湖北省住房和城乡建设厅</td>
+      <td>Hong Kong</td>
+      <td>Environment, International Relations/Exchange, Urban Issues/Development</td>
+      <td>Hubei</td>
+      <td>2020-09-15</td>
+      <td>Anhui, Beijing, Chongqing, Guangdong, Guangxi, Guizhou, Hainan, Hebei, Hubei, Hunan, Jiangsu, Jiangxi, Shaanxi, Shandong, Shanghai, Shanxi, Sichuan, Tianjin, Yunnan, Zhejiang</td>
+    </tr>
+    <tr>
       <td>Association For Manufacturing Technology (AMT)</td>
       <td>机械制造技术协会</td>
       <td>Beijing Commission of Science and Technology</td>
@@ -4409,6 +4420,17 @@
       <td>Agriculture, Civil Society Capacity-Building, Education, Health, International Relations/Exchange</td>
       <td>Beijing</td>
       <td>2017-11-30</td>
+      <td>China</td>
+    </tr>
+    <tr>
+      <td>Peter the Great Saint-Petersburg Polytechnic University (Science and Technology Center)</td>
+      <td>俄罗斯圣彼得堡彼得大帝理工大学（科技中心）</td>
+      <td>Shanghai Commission of Science and Technology</td>
+      <td>上海市科学技术委员会</td>
+      <td>Russia</td>
+      <td>International Relations/Exchange, Science and Technology</td>
+      <td>Shanghai</td>
+      <td>2020-09-14</td>
       <td>China</td>
     </tr>
     <tr>
