--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -826,6 +826,17 @@
       <td>Henan</td>
     </tr>
     <tr>
+      <td>Chamber of Commerce and Industry of Romania</td>
+      <td>罗马尼亚工商联合会</td>
+      <td>Jiangsu Department of Commerce</td>
+      <td>江苏省商务厅</td>
+      <td>Romania</td>
+      <td>Trade/Industry Association</td>
+      <td>Jiangsu</td>
+      <td>2020-09-22</td>
+      <td>Anhui, Jiangsu, Zhejiang</td>
+    </tr>
+    <tr>
       <td>Charity Aid Service Company</td>
       <td>澳大利亚慈善救助服务公司</td>
       <td>Chongqing Bureau of Civil Affairs</td>
