--- a/viz/surveillance/camera_map/face_rec_mapbox.html
+++ b/viz/surveillance/camera_map/face_rec_mapbox.html
@@ -138,14 +138,22 @@
 
 		@media screen and (max-width: 700px) {
 			button {
-					width: 140px;
+					width: 120px;
 					margin-bottom: 5px;
 					background-color: white;
 					color: black;
-					font-size: 11px;
+					font-size: 10px;
 					border-radius: 2px;
 					transition-duration: 0.4s;
 					display: inline;
+			}
+			#map {
+				height:auto;
+				min-height: 50vh;
+				width: 93vw;
+				padding-top:  20px;
+				margin-left: 6px;
+				clear:right;
 			}
 		}
 
@@ -168,7 +176,7 @@
 <body>
 	<div id="wrapper">
 	<div id="H1" class='h1'>Placeholder Title</div>
-	<div id="H2" class='h2'>Lorem14 ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tristique senectus et netus et malesuada fames ac turpis. Fermentum leo vel orci porta non pulvinar neque laoreet suspendisse. Arcu odio ut sem nulla pharetra diam sit. Eget nunc scelerisque viverra mauris in aliquam sem fringilla. Leo urna molestie at elementum.</div>
+	<div id="H2" class='h2'>Lorem15 ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tristique senectus et netus et malesuada fames ac turpis. Fermentum leo vel orci porta non pulvinar neque laoreet suspendisse. Arcu odio ut sem nulla pharetra diam sit. Eget nunc scelerisque viverra mauris in aliquam sem fringilla. Leo urna molestie at elementum.</div>
 	<div id="buttons" class="btn-group">
 			<button id="all" class="all">All</button>
 			<button id="housing" class="all">Housing</button>
