--- a/viz/surveillance/camera_map/face_rec_mapbox1.html
+++ b/viz/surveillance/camera_map/face_rec_mapbox1.html
@@ -20,7 +20,7 @@
 	}
 		#wrapper{
 			margin-right: auto; /* 1 */
-  		margin-left:  15px; /* 1 */
+  		margin-left:  auto; /* 1 */
   		max-width: 960px; 2 */
   		padding-right: 10px; /* 3 */
   		padding-left:  10px; /* 3 */
@@ -54,8 +54,8 @@
 		margin: auto;
 		padding-top:  10px;
 		padding-bottom:  25px;
-		padding-right: 10px;
-		padding-left:  10px;
+		padding-right: 25px;
+		padding-left:  25px;
 		}
 
 		.leaflet-popup-content-wrapper .leaflet-popup-content {
@@ -92,6 +92,7 @@
 		button {
         width: 160px;
 				height: 30px;
+				margin-bottom: 5px;
 				background-color: white;
   			color: black;
 				font-family: Georgia, Times, "Times New Roman", serif;
@@ -142,37 +143,99 @@
 
 
 		@media screen and (max-width: 700px) {
+			#buttons{
+				margin-left: calc((100% - 615px)/2);
+				padding:5px;
+				padding-top: 0px;
+				padding-right: 10px;
+				/* margin:5px; */
+			}
 			button {
 					width: 120px;
+					margin: auto;
 					margin-bottom: 5px;
 					background-color: white;
+					/* background-color: blue; */
 					color: black;
 					font-size: 10px;
-					border-radius: 2px;
-					transition-duration: 0.4s;
+					border: 1px solid #d8d8d8;
+					border-radius: 4px;
+					transition-duration: 0.3s;
 					display: inline;
 			}
 			#map {
 				height:auto;
 				min-height: 50vh;
-				width: 93vw;
+				width: 615px;
+				/* width: 90vw; */
 				padding-top:  20px;
-				margin-left: 6px;
+				margin-left: calc((100% - 615px)/2 + 6px);
+				clear:right;
+			}
+		}
+
+		@media screen and (max-width: 672px) {
+			#buttons{
+				margin-left: calc((100% - 490px)/2);
+				padding:5px;
+				padding-top: 0px;
+				padding-right: 10px;
+				/* margin:5px; */
+			}
+			button {
+					width: 120px;
+					margin: auto;
+					margin-bottom: 5px;
+					background-color: white;
+					/* background-color: purple; */
+					color: black;
+					font-size: 10px;
+					border: 1px solid #d8d8d8;
+					border-radius: 4px;
+					transition-duration: 0.3s;
+					display: inline;
+			}
+			#map {
+				height:auto;
+				min-height: 50vh;
+				width: 490px;
+				/* width: 90vw; */
+				padding-top:  20px;
+				margin-left: calc((100% - 490px)/2 + 6px);
 				clear:right;
 			}
 		}
 
 		@media only screen and (max-width: 600px) {
+			#buttons{
+				margin-left: calc((100% - 430px)/2);
+				padding:5px;
+				padding-top: 0px;
+				padding-right: 10px;
+				/* margin:5px; */
+			}
 			button {
 	        width: 140px;
+					margin: auto;
 					margin-bottom: 5px;
 					background-color: white;
+					/* background-color: orange; */
 	  			color: black;
-					font-size: 11px;
-					border-radius: 2px;
-					transition-duration: 0.4s;
+					font-size: 10px;
+					border: 1px solid #d8d8d8;
+					border-radius: 4px;
+					transition-duration: 0.3s;
 					display: inline;
 	    }
+			#map {
+				height:auto;
+				min-height: 50vh;
+				width: 430px;
+				/* width: 90vw; */
+				padding-top:  20px;
+				margin-left: calc((100% - 430px)/2 + 6px);
+				clear:right;
+			}
 		}
 
 
