--- a/viz/surveillance/camera_map/face_rec_mapbox_monochrome-dark.html
+++ b/viz/surveillance/camera_map/face_rec_mapbox_monochrome-dark.html
@@ -82,6 +82,10 @@
 		opacity: 0.7;
 	}
 
+	.leaflet-tile-container img {
+	    width: 256.5px !important;
+	    height: 256.5px !important;
+	}
 
 		#buttons{
 			float:left;
