--- a/viz/surveillance/camera_map/face_rec_mapbox_monochrome-dark.html
+++ b/viz/surveillance/camera_map/face_rec_mapbox_monochrome-dark.html
@@ -58,6 +58,22 @@
 		padding-right: 25px;
 		padding-left:  25px;
 		}
+		.h3 {
+		max-width: 700;
+		font-size: : 16px;
+		font-family: Georgia, Times, "Times New Roman", serif;
+		font-style: normal;
+		font-variant: normal;
+		color: #000000;
+		background-color: #FFFFFF;
+		display: table-footer-group;
+		text-align: center;
+		margin: auto;
+		padding-top:  10px;
+		padding-bottom:  25px;
+		padding-right: 25px;
+		padding-left:  25px;
+		}
 
 		.leaflet-popup-content-wrapper .leaflet-popup-content {
 			font-family: Georgia, Times, "Times New Roman", serif;
@@ -248,7 +264,7 @@
 		}
 
 
-		@media only screen and (max-width: 450px) {
+		@media only screen and (max-width: 500px) {
 			#buttons{
 				margin-left: calc((100% - 320px)/2);
 				padding:5px;
@@ -287,7 +303,7 @@
 <body>
 	<div id="wrapper">
 	<div id="H1" class='h1'>Placeholder Title</div>
-	<div id="H2" class='h2'>Lorem19 ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tristique senectus et netus et malesuada fames ac turpis. Fermentum leo vel orci porta non pulvinar neque laoreet suspendisse. Arcu odio ut sem nulla pharetra diam sit. Eget nunc scelerisque viverra mauris in aliquam sem fringilla. Leo urna molestie at elementum.</div>
+	<div id="H2" class='h2'>Lorem21 ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tristique senectus et netus et malesuada fames ac turpis. Fermentum leo vel orci porta non pulvinar neque laoreet suspendisse. Arcu odio ut sem nulla pharetra diam sit. Eget nunc scelerisque viverra mauris in aliquam sem fringilla. Leo urna molestie at elementum.</div>
 	<div id="buttons" class="btn-group">
 			<button id="all" class="all">All</button>
 			<button id="housing" class="all">Housing</button>
@@ -304,6 +320,7 @@
 
 	<div id="map"></div>
 	<div id="points" class="points"></div>
+	<div id="H3" class='h3'>Probably some notes here about why we only have one thing for clothing.</div>
 
 </div>
   <script>
