--- a/viz/surveillance/camera_map/face_rec_mapbox_monochrome-dark.html
+++ b/viz/surveillance/camera_map/face_rec_mapbox_monochrome-dark.html
@@ -44,7 +44,7 @@
 		}
 		.h2 {
 		max-width: 700;
-		font-size: : 16px;
+		font-size: 16px;
 		font-family: Georgia, Times, "Times New Roman", serif;
 		/* font-style: normal;
 		font-variant: normal; */
@@ -60,16 +60,15 @@
 		}
 		.h3 {
 		max-width: 700;
-		font-size: : 11px;
+		font-size: 12px;
 		font-family: Georgia, Times, "Times New Roman", serif;
 		font-style: normal;
 		font-variant: normal;
 		color: #000000;
 		background-color: #FFFFFF;
-		position: relative;
 		text-align: center;
 		margin: auto;
-		padding-top:  30px;
+		padding-top:  20px;
 		padding-bottom:  25px;
 		padding-right: 25px;
 		padding-left:  25px;
@@ -353,7 +352,7 @@
 					<td valign="top">
 	<div id="wrapper">
 	<div id="H1" class='h1'>Placeholder Title</div>
-	<div id="H2" class='h2'>Lorem30 ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tristique senectus et netus et malesuada fames ac turpis. Fermentum leo vel orci porta non pulvinar neque laoreet suspendisse. Arcu odio ut sem nulla pharetra diam sit. Eget nunc scelerisque viverra mauris in aliquam sem fringilla. Leo urna molestie at elementum.</div>
+	<div id="H2" class='h2'>Lorem50 ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tristique senectus et netus et malesuada fames ac turpis. Fermentum leo vel orci porta non pulvinar neque laoreet suspendisse. Arcu odio ut sem nulla pharetra diam sit. Eget nunc scelerisque viverra mauris in aliquam sem fringilla. Leo urna molestie at elementum.</div>
 	<div id="buttons" class="btn-group">
 			<button id="all" class="all">All</button>
 			<button id="housing" class="all">Housing</button>
